--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>โปรแกรมคำนวณระบบโซลาร์เซลล์ V.3</title>
+    <title>โปรแกรมคำนวณระบบโซลาร์เซลล์ Version 3.1</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>โปรแกรมคำนวณระบบโซลาร์เซลล์ V.3</h1>
+        <h1>โปรแกรมคำนวณระบบโซลาร์เซลล์ Version 3.1</h1>
 
         <section>
             <h2>1️⃣ คำนวณจากค่าไฟต่อเดือน</h2>
@@ -18,6 +18,7 @@
                 <button onclick="calculateRecommendation()">คำนวณ</button>
                 <button class="clear" onclick="clearRecommendation()">ล้างข้อมูล</button>
             </div>
+
             <div id="recommendationResult"></div>
         </section>
         <p style="color: green; font-size: 0.9em;"><strong>Remark:</strong> การคำนวณนี้อิงจากค่าไฟ 4.5 บาท/หน่วย, แดดเฉลี่ย 5 ชม./วัน และประสิทธิภาพการรับแสง 80% โดยเชื่อมต่อกับระบบ On-grid สำหรับการใช้งานช่วงกลางวันเท่านั้น (ไม่รวมการเก็บไฟไว้ใช้กลางคืน)</p>
