--- a/hybrid.html
+++ b/hybrid.html
@@ -1,3 +1,9 @@
+<!--
+SolarCalculation v4.0 by mpplearning
+License: Non-Commercial Use Only
+Contact: punmanee@gmail.com
+-->
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
