--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@ Contact: punmanee@gmail.com
 </head>
 <body>
     <div class="container">
-        <h1>เลือกประเภทระบบไฟฟ้า</h1>
-        <div class="button-group">
-            <a href="on-grid.html" class="button">🔌 ระบบ On-Grid</a>
-            <a href="off-grid.html" class="button">🔋 ระบบ Off-Grid</a>
-            <a href="hybrid.html" class="button">⚡ ระบบ Hybrid</a>
-        </div>
-    </div>
+  <h1>เลือกประเภทระบบไฟฟ้า</h1>
+  <div class="system-option">
+    <a href="on-grid.html" class="button">🔌 ระบบ On-Grid</a>
+    <span class="desc">☀️ เหมาะสำหรับบ้านที่ใช้ไฟกลางวันเยอะ ช่วยลดค่าไฟได้ทันที</span>
+  </div>
+
+  <div class="system-option">
+    <a href="off-grid.html" class="button">🔋 ระบบ Off-Grid</a>
+    <span class="desc">🏕️ เหมาะสำหรับพื้นที่ไม่มีไฟฟ้า ใช้พลังงานแสงอาทิตย์ + แบตเตอรี่</span>
+  </div>
+
+  <div class="system-option">
+    <a href="hybrid.html" class="button">⚡ ระบบ Hybrid</a>
+    <span class="desc">⚡ ระบบผสมที่ยืดหยุ่น ใช้ได้ทุกสถานการณ์ ไม่สะดุดแม้ไฟดับ</span>
+  </div>
+</div>
+<p class="intro-text">เลือกระบบที่เหมาะกับบ้านของคุณ แล้วเริ่มคำนวณได้เลย!</p>
 </body>
 </html>
