--- a/off-grid.html
+++ b/off-grid.html
@@ -27,8 +27,56 @@ Contact: punmanee@gmail.com
         </div>
 
         <div id="results" class="results-box"></div><br>
-        <a href="index.html" class="button">🔙 กลับหน้าเลือกระบบ</a>
+
+        <!-- ปุ่มแสดง/ซ่อนส่วนคำนวณแบบละเอียด -->
+        <button id="toggleDetailBtn">📋 คำนวณแบบละเอียด</button>
+
+        <div id="detailedSection" style="display: none; margin-top: 20px;">
+            <h3>🔌 รายการอุปกรณ์ไฟฟ้า 10:00–15:00 น. (5 ชั่วโมง/วัน)</h3>
+            <div id="deviceList"></div>
+
+            <div style="margin-top: 10px;">
+                <label>ชื่ออุปกรณ์:
+                    <select id="deviceSelect">
+                        <option value="">-- เลือกอุปกรณ์ --</option>
+                    </select>
+                </label><br>
+
+                <label>ชั่วโมงใช้งาน/วัน:
+                    <input type="number" id="deviceHoursDay" />
+                </label><br>
+
+                <button onclick="addSelectedDevice('day')">➕ เพิ่มอุปกรณ์</button>
+                <button class="clear" onclick="resetFormLoad('day')">ล้างข้อมูล</button>
+            </div>
+
+            <hr style="margin: 30px 0; border-top: 3px solid green;">
+
+            <h3>🔌 รายการอุปกรณ์ไฟฟ้า 15:01–09:59 น. (19 ชั่วโมง/วัน)</h3>
+            <div id="nideviceList"></div>
+
+            <div style="margin-top: 10px;">
+                <label>ชื่ออุปกรณ์:
+                    <select id="nideviceSelect">
+                        <option value="">-- เลือกอุปกรณ์ --</option>
+                    </select>
+                </label><br>
+
+                <label>ชั่วโมงใช้งาน/วัน:
+                    <input type="number" id="deviceHoursNight" />
+                </label><br>
+
+                <button onclick="addSelectedDevice('night')">➕ เพิ่มอุปกรณ์</button>
+                <button class="clear" onclick="resetFormLoad('night')">ล้างข้อมูล</button>
+            </div>
+
+            <button onclick="calculateTotalLoad()" style="margin-top: 10px;">📊 คำนวณโหลดรวม</button>
+            <div id="resultArea" style="margin-top: 10px;"></div><br>
+
+            <br><a href="index.html" class="button">🔙 กลับหน้าเลือกระบบ</a><br>
+        </div>
     </div>
+
     <script src="offscript.js"></script>
 </body>
 </html>
