--- a/off-grid.html
+++ b/off-grid.html
@@ -45,6 +45,7 @@ Contact: punmanee@gmail.com
                     <input type="number" id="deviceHoursDayHour" placeholder="ชั่วโมง" style="width: 80px;"> ชั่วโมง
                     <input type="number" id="deviceHoursDayMin" placeholder="นาที" style="width: 80px;"> นาที
                 </label><br>
+                    <div id="error_day" class="error-message"></div>
 
                 <button onclick="addSelectedDevice('day')">➕ เพิ่มอุปกรณ์</button>
                 <button class="clear" onclick="resetFormLoad('day')">ล้างข้อมูล</button>
@@ -66,6 +67,7 @@ Contact: punmanee@gmail.com
                     <input type="number" id="deviceHoursNightHour" placeholder="ชั่วโมง" style="width: 80px;"> ชั่วโมง
                     <input type="number" id="deviceHoursNightMin" placeholder="นาที" style="width: 80px;"> นาที
                 </label><br>
+                    <div id="error_night" class="error-message"></div>
 
                 <button onclick="addSelectedDevice('night')">➕ เพิ่มอุปกรณ์</button>
                 <button class="clear" onclick="resetFormLoad('night')">ล้างข้อมูล</button>
